--- a/simulation.qmd
+++ b/simulation.qmd
@@ -1,4 +1,3 @@
-# Simulation
 
 ```{r}
 #| label: librariesSim
@@ -8,6 +7,8 @@ library(getPrepareWBData)
 library(ggpubr)
 library(tidyverse)
 ```
+
+# Simulations  
 
 Functions to generate and plot flow time series and empirical cumulative distribution plots using a 2-parameter kappa function
 ```{r}
@@ -158,7 +159,7 @@ Now we want to convert the x-axis values to actual (absolute) flow values. What 
 Start with one value from absolute flow.  
 ```{r}
 #| label: convertRelAbs
-ggarrange(gRelFlow, d_15_2$gECDF)
+
 ggarrange(gRelFlow, d_15_2$gECDF)
 
 flowSeq <- seq(0.01,0.99,0.025)
@@ -177,4 +178,3 @@ ggplot(map, aes(relFlow, absFlow)) +
 
 
 ```
-
