--- a/realData.qmd
+++ b/realData.qmd
@@ -32,7 +32,7 @@ ggplot(d |> filter(!is.na(flow_cfs_log10)), aes(flow_cfs_log10, rank_pred)) +
   geom_smooth(color = "darkgreen", se = FALSE) +
   labs(y = "Predicted percentile", x = "Observed flow (log10(cfs)") +
   theme_publication() +
-  facet_wrap(~station_id, scales = "free")
+  facet_wrap(~station_name, scales = "free")
 
 ```
 
@@ -55,7 +55,97 @@ ggplot(d2, aes(flow_cfs_log10, rank_pred)) +
   geom_smooth(color = "darkgreen", se = FALSE) +
   labs(y = "Predicted percentile", x = "Observed flow (log10(cfs)") +
   theme_publication() +
-  facet_wrap(~station_id, scales = "free")
+  facet_wrap(~station_name, scales = "free")
+
+```
+
+## Plot ECDFs  
+Focus on West Brook 0
+
+```{r}
+#| label: plotECDF
+
+dWB0 <- d |> 
+  filter(
+    !is.na(flow_cfs_log10), 
+    station_name %in% "West Brook 0_01171100"
+  )
+
+ggplot(dWB0, aes(flow_cfs_log10, score)) +
+  geom_point(aes(color = data_group), alpha = 0.1) +
+  guides(color = guide_legend(override.aes = list(alpha = 1))) +
+  geom_smooth(method = "glm", method.args= list(family="binomial"), se = FALSE) +
+  geom_smooth(color = "darkgreen", se = FALSE) +
+  labs(x = "Observed flow (log10(cfs)", y = "Score") +
+  theme_publication()
+
+ggplot(dWB0, aes(scale(flow_cfs_log10), scale(score))) +
+  geom_point(aes(color = data_group), alpha = 0.1) +
+  guides(color = guide_legend(override.aes = list(alpha = 1))) +
+ # geom_smooth(method = "glm", method.args= list(family="binomial"), se = FALSE) +
+  geom_smooth(color = "darkgreen", se = FALSE) +
+  labs(x = "Observed flow (log10(cfs)", y = "Score") +
+  theme_publication()
+
+ggplot(dWB0, aes(rank_obs, rank_pred)) +
+  geom_point(aes(color = data_group), alpha = 0.1) +
+  guides(color = guide_legend(override.aes = list(alpha = 1))) +
+ # geom_smooth(method = "glm", method.args= list(family="binomial"), se = FALSE) +
+  geom_smooth(color = "darkgreen", se = FALSE) +
+  labs(x = "Observed flow (log10(cfs)", y = "Score") +
+  theme_publication()
+
+ggplot(dWB0, aes(flow_cfs_log10, score)) +
+  geom_point(aes(color = data_group), alpha = 0.1) +
+  guides(color = guide_legend(override.aes = list(alpha = 1))) +
+  #geom_smooth(method = "glm", method.args= list(family="binomial"), se = FALSE) +
+  geom_smooth(color = "darkgreen", se = FALSE) +
+  labs(x = "Observed flow (log10(cfs)", y = "score") +
+  theme_publication() +
+  facet_wrap(~data_group)
+
+
+ggplot(dWB0, aes(rank_pred, score)) +
+  geom_point(aes(color = data_group), alpha = 0.1) +
+ # geom_point(aes(rank_obs,flow_cfs,color = data_group), alpha = 0.1) +
+  
+  guides(color = guide_legend(override.aes = list(alpha = 1))) +
+ # geom_smooth(method = "glm", method.args= list(family="binomial"), se = FALSE) +
+  geom_smooth(color = "darkgreen", se = FALSE) +
+  labs(x = "Predicted percentile", y = "Score") +
+  theme_publication() 
+#  facet_wrap(~data_group)
+```
+
+```{r}
+#####
+fn_ecdf_WB0 <- ecdf(dWB0$score)
+
+plot(fn_ecdf_WB0)
+
+ggplot(dWB0, aes(score)) + 
+  stat_ecdf(geom = "step") +
+  stat_ecdf(aes(flow_cfs), color = "blue")
+
+
+
+
+
+
+
+relFlow_WB0 <- data.frame(
+  value = dWB0$rank_pred, 
+  ecdf = fn_ecdf_WB0(dWB0$rank_pred)
+  ) |> 
+  mutate(
+    value0_100 = (value - min(value)) / (max(value) - min(value))
+  )
+
+
+ggplot(relFlow_WB0, aes(value0_100, ecdf)) +
+  geom_point() +
+  labs(x = "Relative flow from FPE scores") +
+  theme_publication()
 
 ```
 
